# FearLauncher

./: .gitignore  .gitmodules  GPLAY_PRIVACY_POLICY.md  PRIVACY_POLICY_ru.md  README.md  README_RU.md  dataremoval.md  extract_fear_core.py  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: android.yml  assets.yml  assetsreport.yml  checkpoint.yml  extract-assets-report.yml  fear.yml  fix.yml  issue.yml  png-repalace.yml  pngrepalace.yml  pngscan.yml  rename.yml  restorecheckpoint.yml  themesoffear.yml
app_pojavlauncher/: build.gradle
app_pojavlauncher/src/main/: AndroidManifest.xml
app_pojavlauncher/src/main/assets/: substitutions.json
app_pojavlauncher/src/main/jni/: CMakeLists.txt  minibridge.c  pojavexec.h  vulkan_loader.c
app_pojavlauncher/src/main/jni/driver_helper/: nsbypass.c
app_pojavlauncher/src/main/jni/jre_launcher/: jre_launcher.c  native_library_hook.c
app_pojavlauncher/src/main/jni/jvm_hooks/: lwjgl_dlopen_hook.c
app_pojavlauncher/src/main/res/anim/: button_click.xml  button_click_anim.xml  button_release.xml  button_scale.xml  fragment_enter.xml  fragment_exit.xml  fragment_pop_enter.xml  fragment_pop_exit.xml  tray_slide_out.xml
app_pojavlauncher/src/main/res/animator/: button_scale.xml  fragment_enter.xml  fragment_exit.xml  fragment_pop_enter.xml  fragment_pop_exit.xml
app_pojavlauncher/src/main/res/color/: checkbox_text_color.xml
app_pojavlauncher/src/main/res/drawable/: avatar_bg.xml  bg_animated_gradient.xml  bg_gradient_liquid.xml  bg_liquid_silver.xml  bg_main.xml  bg_sidebar_liquid.xml  border_card_silver.xml  btn_ripple.xml  btn_rounded.xml  btn_silver_ripple.xml  btn_silver_rounded.xml  button_bg.xml  control_side_action_window.xml  divider_silver.xml  dot_active.xml  (+42 more)
dnbglfw/: build.gradle
dnbglfw/src/main/cpp/: CMakeLists.txt
(+250 files in other folders)
